# TRoMaC_2026_Manipulator

./: .gitignore
.cursor/rules/: ALWAYS-DISCUSSING.mdc  ASK-WHY.mdc  BETTER-WAY.mdc  THE-FIRST-PRINCIPLES.mdc
src/TRoMaC_2026_Manipulator/: .setup_assistant  CLAUDE.md  CMakeLists.txt  package-lock.json  package.xml  radar_em_wave_comm_extraction.md  response.md  tromac_hardware.xml
src/TRoMaC_2026_Manipulator/.claude/skills/: skills.md
src/TRoMaC_2026_Manipulator/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  servo_settings.yaml  机械臂-总装-新-4.SLDASM.ros2_control.xacro  机械臂-总装-新-4.SLDASM.srdf  机械臂-总装-新-4.SLDASM.urdf.xacro
src/TRoMaC_2026_Manipulator/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo_keyboard.launch.py  servo_serial.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/TRoMaC_2026_Manipulator/src/: Serial.cpp  Serial.h  serial_comm_node.cpp  servo_keyboard_input.cpp  tromac_hardware_interface.cpp
src/manipulator/: CMakeLists.txt  package.xml
src/manipulator/config/: display.rviz  joint_names_manipulator.yaml
src/manipulator/launch/: display.launch.py  gazebo.launch.py
src/manipulator/meshes/: 1_Link.STL  2_Link.STL  3_Link.STL  4_Link.STL  5_Link.STL  6Link.STL  base_link.STL  pitch-1_Link.STL  pitch-3_Link.STL  yaw-1_Link.STL
src/manipulator/scripts/: robot_description_pub.py
src/manipulator/urdf/: manipulator.csv  manipulator.urdf
src/moveit2/moveit_ros/moveit_servo/include/moveit_servo/: servo_node.h
src/moveit2/moveit_ros/moveit_servo/src/: servo_node.cpp  utilities.cpp
src/moveit2_tutorials/doc/examples/realtime_servo/: CMakeLists.txt
src/moveit2_tutorials/doc/examples/realtime_servo/src/: servo_keyboard_input.cpp
src/moveit_resources/panda_moveit_config/launch/: moveit.rviz
